Move ConstructorArg population to before TargetNode construction from during ActionGraph transformation.
Summary:
ConstructorArg are currently populated when the TargetGraph gets transformed into an ActionGraph.
This makes it really hard to use the TargetGraph for anything because TargetNode only have raw Map<String, ?>
representations of the rules. This moves the population to right before the TargetGraph construction instead.

Test Plan: CI